# text_editor

./: .gitignore  CMakeLists.txt
.clangd/index/: main.cpp.797EC0C5FA53F6E1.idx
src/: base.cpp  base.h  main.cpp
